--- a/clab3gcc/milestone1/Makefile
+++ b/clab3gcc/milestone1/Makefile
@@ -11,8 +11,8 @@ randomtest : dplist.c randomtest.c
 
 all : dplist.c dplist_test.c
 	mkdir -p build
-	gcc dplist.c dplist_test.c -o build/dplist_test
-	./build/dplist_test
+	gcc dplist.c dplist_test.c -o build/dplist_test -Wall -g
+	./build/dplist_test 
 
 clean:
 	rm -r build
