--- a/clab3gcc/milestone1/Makefile
+++ b/clab3gcc/milestone1/Makefile
@@ -1,12 +1,12 @@
 
 ourtest : dplist.c ourtest.c
 	mkdir -p build
-	gcc dplist.c ourtest.c -o build/dplist_test
+	gcc dplist.c ourtest.c -o build/dplist_test -Wall -g
 	./build/dplist_test
 
 randomtest : dplist.c randomtest.c
 	mkdir -p build
-	gcc dplist.c randomtest.c -o build/dplist_test
+	gcc dplist.c randomtest.c -o build/dplist_test -Wall -g
 	./build/dplist_test
 
 all : dplist.c dplist_test.c
